--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ nav {
     margin-top: 35px;
 }
 
-a {
+.index {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
